--- a/HTML/content/games/DandD_character_sheet.html
+++ b/HTML/content/games/DandD_character_sheet.html
@@ -263,11 +263,17 @@
             try {
                 const prompt = `A highly detailed fantasy character portrait. ${race} ${characterClass} ${gender}, wearing ${equipment}. ${description}. Digital painting, detailed face, professional fantasy art, trending on artstation, masterpiece quality.`;
                 
+                // Check if API key is set
+                const API_KEY = 'sk-bztqVnhUojtvMbHJs43YlidQRcUDDuS1dLPLStphptTn0PDX';
+                if (API_KEY === 'YOUR_API_KEY') {
+                    throw new Error('Please set your Stability AI API key first. Visit https://platform.stability.ai to get one.');
+                }
+
                 const response = await fetch('https://api.stability.ai/v1/generation/stable-diffusion-xl-1024-v1-0/text-to-image', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Authorization': 'Bearer YOUR_API_KEY', // Replace with actual API key
+                        'Authorization': `Bearer ${API_KEY}`,
                         'Accept': 'application/json'
                     },
                     body: JSON.stringify({
@@ -297,7 +303,11 @@
                 localStorage.setItem('characterImage', imageUrl);
             } catch (error) {
                 console.error('Error generating image:', error);
-                alert('Failed to generate image. Please try again later. / चित्र सिर्जना गर्न असफल भयो। कृपया पछि पुन: प्रयास गर्नुहोस्।');
+                if (error.message.includes('API key')) {
+                    alert(error.message);
+                } else {
+                    alert('Failed to generate image. Please try again later. / चित्र सिर्जना गर्न असफल भयो। कृपया पछि पुन: प्रयास गर्नुहोस्।');
+                }
             } finally {
                 container.classList.remove('loading');
                 generateBtn.disabled = false;
@@ -360,7 +370,84 @@
             return baseAC + dexterityMod;
         }
 
-        function generateRandomCharacter() {
+        async function generateCharacterText(characterInfo) {
+            const HF_API_KEY = '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'; // Replace with your Hugging Face API key
+            
+            if (HF_API_KEY === 'YOUR_HUGGINGFACE_KEY') {
+                throw new Error('Please set your Hugging Face API key. Visit https://huggingface.co/settings/tokens to get one.');
+            }
+
+            const descriptionPrompt = `Create a character description for a D&D character with the following traits:
+Race: ${characterInfo.race}
+Class: ${characterInfo.class}
+Gender: ${characterInfo.gender}
+Level: ${characterInfo.level}
+Strength: ${characterInfo.strength}
+Dexterity: ${characterInfo.dexterity}
+Constitution: ${characterInfo.constitution}
+Intelligence: ${characterInfo.intelligence}
+Wisdom: ${characterInfo.wisdom}
+Charisma: ${characterInfo.charisma}
+
+Write a two paragraph description of their appearance, personality, and background.`;
+
+            const equipmentPrompt = `List appropriate equipment for a level ${characterInfo.level} ${characterInfo.race} ${characterInfo.class}.
+Include weapons, armor, and adventuring gear that would make sense for their class and level.
+Format as a simple list.`;
+
+            try {
+                // Generate character description
+                const descriptionResponse = await fetch(
+                    'https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2',
+                    {
+                        method: 'POST',
+                        headers: {
+                            'Authorization': `Bearer ${HF_API_KEY}`,
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            inputs: descriptionPrompt,
+                            parameters: {
+                                max_new_tokens: 300,
+                                temperature: 0.7,
+                            }
+                        }),
+                    }
+                );
+
+                // Generate equipment list
+                const equipmentResponse = await fetch(
+                    'https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2',
+                    {
+                        method: 'POST',
+                        headers: {
+                            'Authorization': `Bearer ${HF_API_KEY}`,
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            inputs: equipmentPrompt,
+                            parameters: {
+                                max_new_tokens: 200,
+                                temperature: 0.7,
+                            }
+                        }),
+                    }
+                );
+
+                const description = await descriptionResponse.json();
+                const equipment = await equipmentResponse.json();
+
+                return {
+                    description: description[0].generated_text,
+                    equipment: equipment[0].generated_text
+                };
+            } catch (error) {
+                console.error('Error generating text:', error);
+                throw new Error('Failed to generate character text. Please check your API key or try again later.');
+            }
+        }
+
+        async function generateRandomCharacter() {
             // Generate random race
             const races = ['elf', 'dwarf', 'human', 'faerie', 'halfling'];
             const randomRace = races[Math.floor(Math.random() * races.length)];
@@ -371,11 +458,11 @@
             const randomClass = classes[Math.floor(Math.random() * classes.length)];
 
             // Generate random gender
-            const genders = ['male', 'female', 'non-binary'];
+            const genders = ['male', 'female'];
             const randomGender = genders[Math.floor(Math.random() * genders.length)];
 
             // Generate random level (1-20)
-            const level = getRandomInt(1, 20);
+            const level = getRandomInt(1, 2);
 
             // Generate ability scores
             const strength = rollAbilityScore();
@@ -392,6 +479,29 @@
             const hp = calculateHP(randomClass, level, constitutionMod);
             const ac = calculateAC(randomClass, dexterityMod);
             const initiative = dexterityMod;
+
+            const characterInfo = {
+                race: randomRace,
+                class: randomClass,
+                gender: randomGender,
+                level: level,
+                strength: strength,
+                dexterity: dexterity,
+                constitution: constitution,
+                intelligence: intelligence,
+                wisdom: wisdom,
+                charisma: charisma
+            };
+
+            // Generate AI text for description and equipment
+            try {
+                const generatedText = await generateCharacterText(characterInfo);
+                document.getElementById('characterDescription').value = generatedText.description;
+                document.getElementById('equipment').value = generatedText.equipment;
+            } catch (error) {
+                console.error(error);
+                alert(error.message);
+            }
 
             // Update form fields
             document.getElementById('race').value = randomRace;
