--- a/HTML/content/games/DandD_character_sheet.html
+++ b/HTML/content/games/DandD_character_sheet.html
@@ -474,7 +474,7 @@
             const races = ['elf', 'dwarf', 'human', 'faerie', 'halfling'];
             const classes = ['barbarian', 'bard', 'cleric', 'druid', 'fighter', 'monk', 
                            'paladin', 'ranger', 'rogue', 'sorcerer', 'warlock', 'wizard'];
-            const genders = ['male', 'female', 'non-binary'];
+            const genders = ['male', 'female'];
 
             const randomRace = races[Math.floor(Math.random() * races.length)];
             const randomClass = classes[Math.floor(Math.random() * classes.length)];
