add psychological trauma healing to cert program

--- a/HTML/content/healing/healer_certification.html
+++ b/HTML/content/healing/healer_certification.html
@@ -76,16 +76,14 @@
                     <li>Foundations of holistic health in Eastern and Western contexts</li>
                     <li>Introduction to Ayurvedic principles</li>
                     <li>Ethics and professional practice guidelines</li>
-                </ul>
-
-                <h2>2. Holistic Healing Foundations (12 weeks)</h2>
-                <h3>Reiki</h3>
-                <ul>
-                    <li>History and principles</li>
-                    <li>Energy systems and chakras</li>
-                    <li>Hand positions and techniques</li>
-                    <li>Distance healing</li>
-                    <li>Clinical applications and case studies</li>
+                    <li>Client intake and assessment procedures</li>
+                    <li>Electronic Health Records (EHR) management</li>
+                    <li>Healthcare data collection and organization</li>
+                    <li>Basic statistical analysis for patient outcomes</li>
+                    <li>Data visualization and reporting techniques</li>
+                    <li>Privacy and security in healthcare data</li>
+                    <li>Predictive analytics for treatment outcomes</li>
+                    <li>Integration of traditional metrics with modern analytics</li>
                 </ul>
             </div>
 
@@ -96,22 +94,38 @@
                     <li>पूर्वी र पश्चिमी सन्दर्भमा समग्र स्वास्थ्यको आधार</li>
                     <li>आयुर्वेदिक सिद्धान्तहरूको परिचय</li>
                     <li>नैतिकता र व्यावसायिक अभ्यास दिशानिर्देशहरू</li>
-                </ul>
-
-                <h2>२. समग्र स्वास्थ्य आधारहरू (१२ हप्ता)</h2>
-                <h3>रेकी</h3>
-                <ul>
-                    <li>इतिहास र सिद्धान्तहरू</li>
-                    <li>ऊर्जा प्रणाली र चक्रहरू</li>
-                    <li>हात स्थिति र प्रविधिहरू</li>
-                    <li>दूर उपचार</li>
-                    <li>क्लिनिकल अनुप्रयोगहरू र केस अध्ययनहरू</li>
+                    <li>सेवाग्राही भर्ना र मूल्यांकन प्रक्रियाहरू</li>
+                    <li>विद्युतीय स्वास्थ्य रेकर्ड (ईएचआर) व्यवस्थापन</li>
+                    <li>स्वास्थ्य डाटा संकलन र व्यवस्थापन</li>
+                    <li>बिरामी परिणामहरूको लागि आधारभूत तथ्यांकीय विश्लेषण</li>
+                    <li>डाटा भिजुअलाइजेसन र रिपोर्टिङ प्रविधिहरू</li>
+                    <li>स्वास्थ्य डाटामा गोपनीयता र सुरक्षा</li>
+                    <li>उपचार परिणामहरूको लागि पूर्वानुमानात्मक विश्लेषण</li>
+                    <li>परम्परागत मापनको आधुनिक विश्लेषणसँग एकीकरण</li>
                 </ul>
             </div>
         </div>
 
         <div class="grid-container">
             <div class="english">
+                <h2>Practical Requirements</h2>
+                <ul>
+                    <li>500 hours classroom instruction</li>
+                    <li>200 hours clinical practice</li>
+           
+
+        <div class="grid-container">
+            <div class="english">
+                <h2>2. Holistic Healing Foundations (12 weeks)</h2>
+                <h3>Reiki</h3>
+                <ul>
+                    <li>History and principles</li>
+                    <li>Energy systems and chakras</li>
+                    <li>Hand positions and techniques</li>
+                    <li>Distance healing</li>
+                    <li>Clinical applications and case studies</li>
+                </ul>
+
                 <h3>Lymphatic Drainage</h3>
                 <ul>
                     <li>Lymphatic system anatomy and physiology</li>
@@ -123,25 +137,7 @@
                     <li>High-altitude lymphatic considerations</li>
                     <li>Self-care techniques and client education</li>
                 </ul>
-            </div>
 
-            <div class="nepali">
-                <h3>लसिका निकास</h3>
-                <ul>
-                    <li>लसिका प्रणालीको शरीर रचना र क्रियाविज्ञान</li>
-                    <li>म्यानुअल लसिका निकास प्रविधि र क्रमहरू</li>
-                    <li>प्रतिकूल संकेत र सावधानीहरू</li>
-                    <li>विभिन्न अवस्थाहरूका लागि उपचार प्रोटोकलहरू</li>
-                    <li>शल्यक्रिया पछि र चोटपटक निको पार्ने अनुप्रयोगहरू</li>
-                    <li>आयुर्वेदिक लसिका अवधारणाहरूसँग एकीकरण</li>
-                    <li>उच्च उचाईमा लसिका सम्बन्धी विचारहरू</li>
-                    <li>स्व-हेरचाह प्रविधिहरू र सेवाग्राही शिक्षा</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="english">
                 <h3>Craniosacral Therapy</h3>
                 <ul>
                     <li>Anatomy and physiology of the craniosacral system</li>
@@ -154,26 +150,7 @@
                     <li>Clinical applications for various conditions</li>
                     <li>Working with birth trauma and developmental patterns</li>
                 </ul>
-            </div>
 
-            <div class="nepali">
-                <h3>क्रेनियोस्याक्रल थेरापी</h3>
-                <ul>
-                    <li>क्रेनियोस्याक्रल प्रणालीको शरीर रचना र क्रियाविज्ञान</li>
-                    <li>मस्तिष्क-मेरुदण्ड तरल पदार्थको गतिशीलता</li>
-                    <li>स्पर्श कौशल र सुन्ने प्रविधिहरू</li>
-                    <li>उपचार प्रोटोकल र प्रविधिहरू</li>
-                    <li>खोपडी लयहरू र ढाँचाहरूको मूल्यांकन</li>
-                    <li>शारीरिक-भावनात्मक रिलिज प्रक्रियाहरू</li>
-                    <li>परम्परागत नेपाली चिकित्सासँग एकीकरण</li>
-                    <li>विभिन्न अवस्थाहरूका लागि क्लिनिकल अनुप्रयोगहरू</li>
-                    <li>जन्म आघात र विकासात्मक ढाँचाहरूसँग काम गर्ने</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="english">
                 <h3>Polyvagal Theory</h3>
                 <ul>
                     <li>Understanding the autonomic nervous system and vagal pathways</li>
@@ -188,6 +165,41 @@
             </div>
 
             <div class="nepali">
+                <h2>२. समग्र स्वास्थ्य आधारहरू (१२ हप्ता)</h2>
+                <h3>रेकी</h3>
+                <ul>
+                    <li>इतिहास र सिद्धान्तहरू</li>
+                    <li>ऊर्जा प्रणाली र चक्रहरू</li>
+                    <li>हात स्थिति र प्रविधिहरू</li>
+                    <li>दूर उपचार</li>
+                    <li>क्लिनिकल अनुप्रयोगहरू र केस अध्ययनहरू</li>
+                </ul>
+
+                <h3>लसिका निकास</h3>
+                <ul>
+                    <li>लसिका प्रणालीको शरीर रचना र क्रियाविज्ञान</li>
+                    <li>म्यानुअल लसिका निकास प्रविधि र क्रमहरू</li>
+                    <li>प्रतिकूल संकेत र सावधानीहरू</li>
+                    <li>विभिन्न अवस्थाहरूका लागि उपचार प्रोटोकलहरू</li>
+                    <li>शल्यक्रिया पछि र चोटपटक निको पार्ने अनुप्रयोगहरू</li>
+                    <li>आयुर्वेदिक लसिका अवधारणाहरूसँग एकीकरण</li>
+                    <li>उच्च उचाईमा लसिका सम्बन्धी विचारहरू</li>
+                    <li>स्व-हेरचाह प्रविधिहरू र सेवाग्राही शिक्षा</li>
+                </ul>
+
+                <h3>क्रेनियोस्याक्रल थेरापी</h3>
+                <ul>
+                    <li>क्रेनियोस्याक्रल प्रणालीको शरीर रचना र क्रियाविज्ञान</li>
+                    <li>मस्तिष्क-मेरुदण्ड तरल पदार्थको गतिशीलता</li>
+                    <li>स्पर्श कौशल र सुन्ने प्रविधिहरू</li>
+                    <li>उपचार प्रोटोकल र प्रविधिहरू</li>
+                    <li>खोपडी लयहरू र ढाँचाहरूको मूल्यांकन</li>
+                    <li>शारीरिक-भावनात्मक रिलिज प्रक्रियाहरू</li>
+                    <li>परम्परागत नेपाली चिकित्सासँग एकीकरण</li>
+                    <li>विभिन्न अवस्थाहरूका लागि क्लिनिकल अनुप्रयोगहरू</li>
+                    <li>जन्म आघात र विकासात्मक ढाँचाहरूसँग काम गर्ने</li>
+                </ul>
+
                 <h3>पोलीभेगल सिद्धान्त</h3>
                 <ul>
                     <li>स्वायत्त स्नायु प्रणाली र भेगल मार्गहरू बुझ्ने</li>
@@ -198,28 +210,6 @@
                     <li>शरीर-आधारित हस्तक्षेप र चिकित्सकीय उपस्थिति</li>
                     <li>मूल्यांकन उपकरणहरू र क्लिनिकल अनुप्रयोगहरू</li>
                     <li>स्नायु प्रणाली नियमनमा सांस्कृतिक विचारहरू</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="english">
-                <h3>Craniosacral Therapy</h3>
-                <ul>
-                    <li>Anatomy and physiology of craniosacral system</li>
-                    <li>Palpation skills and listening techniques</li>
-                    <li>Treatment protocols</li>
-                    <li>Integration with traditional Nepali medicine</li>
-                </ul>
-            </div>
-
-            <div class="nepali">
-                <h3>क्रेनियोस्याक्रल थेरापी</h3>
-                <ul>
-                    <li>क्रेनियोस्याक्रल प्रणालीको शरीर रचना र शरीर क्रिया विज्ञान</li>
-                    <li>स्पर्श कौशल र सुन्ने प्रविधिहरू</li>
-                    <li>उपचार प्रोटोकलहरू</li>
-                    <li>परम्परागत नेपाली चिकित्सासँग एकीकरण</li>
                 </ul>
             </div>
         </div>
@@ -252,7 +242,6 @@
             </div>
         </div>
 
-        
         <div class="grid-container">
             <div class="english">
                 <h2>4. Medical Herbalism (16 weeks)</h2>
@@ -323,15 +312,6 @@
                     <li>Research methods</li>
                     <li>Sustainable practice models</li>
                 </ul>
-
-                <h2>Practical Requirements</h2>
-                <ul>
-                    <li>500 hours classroom instruction</li>
-                    <li>200 hours clinical practice</li>
-                    <li>100 hours community service</li>
-                    <li>50 hours personal practice</li>
-                    <li>Final project integrating multiple modalities</li>
-                </ul>
             </div>
 
             <div class="nepali">
@@ -345,107 +325,39 @@
                     <li>अनुसन्धान विधिहरू</li>
                     <li>दिगो अभ्यास मोडेलहरू</li>
                 </ul>
-
-                <h2>व्यावहारिक आवश्यकताहरू</h2>
-                <ul>
-                    <li>५०० घण्टा कक्षा शिक्षण</li>
-                    <li>२०० घण्टा क्लिनिकल अभ्यास</li>
-                    <li>१०० घण्टा सामुदायिक सेवा</li>
-                    <li>५० घण्टा व्यक्तिगत अभ्यास</li>
-                    <li>बहु विधाहरू एकीकृत गर्ने अन्तिम परियोजना</li>
-                </ul>
             </div>
         </div>
 
         <div class="grid-container">
             <div class="english">
-                <h2>Certification Levels</h2>
+                <h2>7. Psychological Trauma Healing (12 weeks)</h2>
                 <ul>
-                    <li>Foundation Certificate (Year 1)</li>
-                    <li>Advanced Practitioner (Year 2)</li>
-                    <li>Master Practitioner (Year 3)</li>
-                </ul>
-
-                <h2>Additional Features</h2>
-                <ul>
-                    <li>Mentorship program with local healers</li>
-                    <li>Cultural immersion experiences</li>
-                    <li>Regular community clinics</li>
-                    <li>Seasonal ceremonies and celebrations</li>
-                    <li>Research opportunities with local universities</li>
-                    <li>Exchange programs with international healing centers</li>
+                    <li>Understanding trauma physiology and neurobiology</li>
+                    <li>EMDR (Eye Movement Desensitization and Reprocessing) fundamentals</li>
+                    <li>Recapitulation techniques and safe memory processing</li>
+                    <li>Creating and maintaining therapeutic safe space</li>
+                    <li>Somatic experiencing and body-based trauma release</li>
+                    <li>Integration of traditional Nepali healing practices for trauma</li>
+                    <li>Working with collective and intergenerational trauma</li>
+                    <li>Crisis intervention and safety protocols</li>
+                    <li>Cultural sensitivity in trauma work</li>
+                    <li>Self-regulation techniques for practitioners and clients</li>
                 </ul>
             </div>
 
             <div class="nepali">
-                <h2>प्रमाणीकरण तहहरू</h2>
+                <h2>७. मनोवैज्ञानिक आघात उपचार (१२ हप्ता)</h2>
                 <ul>
-                    <li>आधारभूत प्रमाणपत्र (वर्ष १)</li>
-                    <li>उन्नत चिकित्सक (वर्ष २)</li>
-                    <li>विशेषज्ञ चिकित्सक (वर्ष ३)</li>
-                </ul>
-
-                <h2>अतिरिक्त सुविधाहरू</h2>
-                <ul>
-                    <li>स्थानीय चिकित्सकहरूसँग मेन्टरशिप कार्यक्रम</li>
-                    <li>सांस्कृतिक समावेश अनुभवहरू</li>
-                    <li>नियमित सामुदायिक क्लिनिकहरू</li>
-                    <li>मौसमी समारोह र उत्सवहरू</li>
-                    <li>स्थानीय विश्वविद्यालयहरूसँग अनुसन्धान अवसरहरू</li>
-                    <li>अन्तर्राष्ट्रिय उपचार केन्द्रहरूसँग आदान-प्रदान कार्यक्रमहरू</li>
+                    <li>आघात शरीरक्रिया र न्युरोबायोलोजी बुझ्ने</li>
+                    <li>ईएमडीआर (आँखा चलाउने असंवेदनीकरण र पुनःप्रक्रिया) को आधारभूत ज्ञान</li>
+                    <li>पुनःस्मरण प्रविधिहरू र सुरक्षित स्मृति प्रक्रिया</li>
+                    <li>चिकित्सकीय सुरक्षित स्थान सिर्जना र कायम राख्ने</li>
+                    <li>शारीरिक अनुभव र शरीर-आधारित आघात विमोचन</li>
+                    <li>आघातको लागि परम्परागत नेपाली उपचार पद्धतिहरूको एकीकरण</li>
+                    <li>सामूहिक र पुस्तान्तरित आघातसँग काम गर्ने</li>
+                    <li>संकट हस्तक्षेप र सुरक्षा प्रोटोकलहरू</li>
+                    <li>आघात कार्यमा सांस्कृतिक संवेदनशीलता</li>
+                    <li>चिकित्सक र सेवाग्राहीहरूका लागि स्व-नियमन प्रविधिहरू</li>
                 </ul>
             </div>
         </div>
-
-        <div class="grid-container">
-            <div class="english">
-                <h2>Assessment Methods</h2>
-                <ul>
-                    <li>Written examinations</li>
-                    <li>Practical demonstrations</li>
-                    <li>Case studies</li>
-                    <li>Research projects</li>
-                    <li>Community feedback</li>
-                    <li>Personal development journal</li>
-                    <li>Final integration project</li>
-                </ul>
-
-                <h2>Program Support</h2>
-                <ul>
-                    <li>Online learning platform</li>
-                    <li>Library resources</li>
-                    <li>Practice groups</li>
-                    <li>Professional networking</li>
-                    <li>Continuing education opportunities</li>
-                    <li>Graduate mentorship program</li>
-                </ul>
-            </div>
-
-            <div class="nepali">
-                <h2>मूल्यांकन विधिहरू</h2>
-                <ul>
-                    <li>लिखित परीक्षाहरू</li>
-                    <li>व्यावहारिक प्रदर्शनहरू</li>
-                    <li>केस अध्ययनहरू</li>
-                    <li>अनुसन्धान परियोजनाहरू</li>
-                    <li>सामुदायिक प्रतिक्रिया</li>
-                    <li>व्यक्तिगत विकास डायरी</li>
-                    <li>अन्तिम एकीकरण परियोजना</li>
-                </ul>
-
-                <h2>कार्यक्रम सहयोग</h2>
-                <ul>
-                    <li>अनलाइन सिकाइ प्लेटफर्म</li>
-                    <li>पुस्तकालय स्रोतहरू</li>
-                    <li>अभ्यास समूहहरू</li>
-                    <li>व्यावसायिक नेटवर्किङ</li>
-                    <li>निरन्तर शिक्षाका अवसरहरू</li>
-                    <li>स्नातक मेन्टरशिप कार्यक्रम</li>
-                </ul>
-            </div>
-        </div>
-
-
-    </div>
-</body>
-</html>
