program outlines for healing course

--- a/HTML/content/healing/healer_certification.html
+++ b/HTML/content/healing/healer_certification.html
@@ -360,4 +360,106 @@
                     <li>चिकित्सक र सेवाग्राहीहरूका लागि स्व-नियमन प्रविधिहरू</li>
                 </ul>
             </div>
+            
+<div class="grid-container">
+            <div class="english">
+                <h2>8. Advanced Meditation Practices (12 weeks)</h2>
+                <ul>
+                    <li>Chöd practice and principles
+                        <ul>
+                            <li>History and lineage of Chöd in Tibetan Buddhism</li>
+                            <li>Understanding ego-clinging and attachment</li>
+                            <li>Visualization techniques and sacred instruments</li>
+                            <li>Practice of offering and letting go</li>
+                        </ul>
+                    </li>
+                    <li>Vijnana Bhairava Tantra
+                        <ul>
+                            <li>112 meditation techniques from the text</li>
+                            <li>Breath awareness and pranayama practices</li>
+                            <li>Sound and vibration meditation methods</li>
+                            <li>Integration with daily life activities</li>
+                        </ul>
+                    </li>
+                    <li>Newar Buddhist Meditation
+                        <ul>
+                            <li>Charya Nritya sacred dance meditation</li>
+                            <li>Mandala visualization practices</li>
+                            <li>Integration of art and meditation</li>
+                        </ul>
+                    </li>
+                    <li>Himalayan Bon Practices
+                        <ul>
+                            <li>Nine Breathings of Purification</li>
+                            <li>Tsa Lung Trul Khor (Tibetan Yoga)</li>
+                            <li>Sound healing with singing bowls</li>
+                        </ul>
+                    </li>
+                    <li>Shamanic Journey Work
+                        <ul>
+                            <li>Traditional Jhankri practices</li>
+                            <li>Drum journeying techniques</li>
+                            <li>Working with nature spirits and elements</li>
+                        </ul>
+                    </li>
+                    <li>Integration and Clinical Applications
+                        <ul>
+                            <li>Adapting practices for therapeutic settings</li>
+                            <li>Cultural sensitivity and appropriate use</li>
+                            <li>Case studies and practical applications</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="nepali">
+                <h2>८. उन्नत ध्यान अभ्यास (१२ हप्ता)</h2>
+                <ul>
+                    <li>छोड अभ्यास र सिद्धान्तहरू
+                        <ul>
+                            <li>तिब्बती बौद्ध धर्ममा छोडको इतिहास र परम्परा</li>
+                            <li>अहं-आसक्ति र लगाव बुझ्ने</li>
+                            <li>चित्रण प्रविधिहरू र पवित्र वाद्ययन्त्रहरू</li>
+                            <li>अर्पण र छोड्ने अभ्यास</li>
+                        </ul>
+                    </li>
+                    <li>विज्ञान भैरव तन्त्र
+                        <ul>
+                            <li>पाठबाट ११२ ध्यान प्रविधिहरू</li>
+                            <li>श्वास जागरूकता र प्राणायाम अभ्यासहरू</li>
+                            <li>ध्वनि र कम्पन ध्यान विधिहरू</li>
+                            <li>दैनिक जीवन क्रियाकलापहरूसँग एकीकरण</li>
+                        </ul>
+                    </li>
+                    <li>नेवार बौद्ध ध्यान
+                        <ul>
+                            <li>चर्या नृत्य पवित्र नृत्य ध्यान</li>
+                            <li>मण्डल चित्रण अभ्यासहरू</li>
+                            <li>कला र ध्यानको एकीकरण</li>
+                        </ul>
+                    </li>
+                    <li>हिमालयन बोन अभ्यासहरू
+                        <ul>
+                            <li>शुद्धिकरणका नौ श्वासहरू</li>
+                            <li>ца लुङ त्रुल खोर (तिब्बती योग)</li>
+                            <li>ध्यान कटोराहरूसँग ध्वनि उपचार</li>
+                        </ul>
+                    </li>
+                    <li>शामानिक यात्रा कार्य
+                        <ul>
+                            <li>परम्परागत झाँक्री अभ्यासहरू</li>
+                            <li>ढोल यात्रा प्रविधिहरू</li>
+                            <li>प्रकृति आत्मा र तत्वहरूसँग काम</li>
+                        </ul>
+                    </li>
+                    <li>एकीकरण र क्लिनिकल अनुप्रयोगहरू
+                        <ul>
+                            <li>चिकित्सकीय सेटिङहरूका लागि अभ्यासहरू अनुकूलन</li>
+                            <li>सांस्कृतिक संवेदनशीलता र उचित प्रयोग</li>
+                            <li>केस अध्ययन र व्यावहारिक अनुप्रयोगहरू</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>            
         </div>
