--- a/HTML/content/healing/medical_herbalism.html
+++ b/HTML/content/healing/medical_herbalism.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detailed Course Schedule - Medical Herbalism</title>
+    <title>Medical Herbalism - Detailed Course Schedule</title>
     <style>
         body {
             font-family: 'Noto Sans', Arial, sans-serif;
@@ -61,11 +61,6 @@
             font-weight: bold;
             color: #2c3e50;
         }
-        @media (max-width: 768px) {
-            .day-container {
-                grid-template-columns: 1fr;
-            }
-        }
     </style>
 </head>
 <body>
@@ -73,6 +68,222 @@
         <div class="header">
             <h1>Medical Herbalism - Detailed Course Schedule</h1>
             <h1>औषधीय जडीबुटी विज्ञान - विस्तृत पाठ्यक्रम तालिका</h1>
+        </div>
+
+        <div class="week-container">
+            <h2>Course Overview (16 Weeks)</h2>
+            <h2>पाठ्यक्रम समीक्षा (१६ हप्ता)</h2>
+            
+            <div class="day-container">
+                <div class="english">
+                    <ul>
+                        <li>Weeks 1-4: Plant Study and Identification</li>
+                        <li>Weeks 5-8: Traditional Medicine Principles</li>
+                        <li>Weeks 9-12: Medicine Making and Clinical Applications</li>
+                        <li>Weeks 13-16: Conservation and Sustainable Practice</li>
+                    </ul>
+                </div>
+                <div class="nepali">
+                    <ul>
+                        <li>हप्ता १-४: वनस्पति अध्ययन र पहिचान</li>
+                        <li>हप्ता ५-८: परम्परागत औषधि सिद्धान्तहरू</li>
+                        <li>हप्ता ९-१२: औषधि निर्माण र क्लिनिकल अनुप्रयोग</li>
+                        <li>हप्ता १३-१६: संरक्षण र दिगो अभ्यास</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Weeks 1-4: Plant Study and Identification -->
+        <div class="week-container">
+            <h2>Weeks 1-4: Plant Study and Identification</h2>
+            <h2>हप्ता १-४: वनस्पति अध्ययन र पहिचान</h2>
+
+            <div class="day-container">
+                <div class="english">
+                    <h3>Week 1-2: Basic Botany and Plant Identification</h3>
+                    <div class="schedule-item">
+                        <div class="time">Morning Sessions (9:00 AM - 12:00 PM):</div>
+                        <ul>
+                            <li>Plant taxonomy and classification</li>
+                            <li>Plant families and their characteristics</li>
+                            <li>Morphological features for identification</li>
+                            <li>Use of botanical keys and guides</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">Afternoon Sessions (1:00 PM - 4:00 PM):</div>
+                        <ul>
+                            <li>Field identification techniques</li>
+                            <li>Plant collection methods</li>
+                            <li>Herbarium specimen preparation</li>
+                            <li>Documentation and record-keeping</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="nepali">
+                    <h3>हप्ता १-२: आधारभूत वनस्पति विज्ञान र वनस्पति पहिचान</h3>
+                    <div class="schedule-item">
+                        <div class="time">बिहानको सत्र (९:०० - १२:००):</div>
+                        <ul>
+                            <li>वनस्पति वर्गीकरण र वर्गीकरण</li>
+                            <li>वनस्पति परिवारहरू र तिनका विशेषताहरू</li>
+                            <li>पहिचानको लागि आकृतिक विशेषताहरू</li>
+                            <li>वानस्पतिक कुञ्जी र मार्गदर्शनहरूको प्रयोग</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">दिउँसोको सत्र (१:०० - ४:००):</div>
+                        <ul>
+                            <li>क्षेत्र पहिचान प्रविधिहरू</li>
+                            <li>वनस्पति संकलन विधिहरू</li>
+                            <li>हर्बेरियम नमूना तयारी</li>
+                            <li>कागजात र रेकर्ड राख्ने</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="day-container">
+                <div class="english">
+                    <h3>Week 3-4: Medicinal Plant Species</h3>
+                    <div class="schedule-item">
+                        <div class="time">Morning Sessions (9:00 AM - 12:00 PM):</div>
+                        <ul>
+                            <li>Common medicinal plants of Nepal</li>
+                            <li>Traditional uses and properties</li>
+                            <li>Habitat and growing conditions</li>
+                            <li>Seasonal availability and harvesting times</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">Afternoon Sessions (1:00 PM - 4:00 PM):</div>
+                        <ul>
+                            <li>Plant part identification</li>
+                            <li>Active constituent analysis</li>
+                            <li>Quality assessment methods</li>
+                            <li>Sustainable harvesting practices</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="nepali">
+                    <h3>हप्ता ३-४: औषधीय वनस्पति प्रजातिहरू</h3>
+                    <div class="schedule-item">
+                        <div class="time">बिहानको सत्र (९:०० - १२:००):</div>
+                        <ul>
+                            <li>नेपालका सामान्य औषधीय वनस्पतिहरू</li>
+                            <li>परम्परागत प्रयोग र गुणहरू</li>
+                            <li>वासस्थान र वृद्धि अवस्थाहरू</li>
+                            <li>मौसमी उपलब्धता र संकलन समय</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">दिउँसोको सत्र (१:०० - ४:००):</div>
+                        <ul>
+                            <li>वनस्पति भाग पहिचान</li>
+                            <li>सक्रिय घटक विश्लेषण</li>
+                            <li>गुणस्तर मूल्यांकन विधिहरू</li>
+                            <li>दिगो संकलन अभ्यासहरू</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Weeks 5-8: Traditional Medicine Principles -->
+        <div class="week-container">
+            <h2>Weeks 5-8: Traditional Medicine Principles</h2>
+            <h2>हप्ता ५-८: परम्परागत औषधि सिद्धान्तहरू</h2>
+
+            <div class="day-container">
+                <div class="english">
+                    <h3>Week 5-6: Foundations of Traditional Medicine</h3>
+                    <div class="schedule-item">
+                        <div class="time">Morning Sessions (9:00 AM - 12:00 PM):</div>
+                        <ul>
+                            <li>History of Nepali traditional medicine</li>
+                            <li>Basic principles of Ayurveda</li>
+                            <li>Traditional diagnostic methods</li>
+                            <li>Understanding doshas and constitution</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">Afternoon Sessions (1:00 PM - 4:00 PM):</div>
+                        <ul>
+                            <li>Traditional pharmacology</li>
+                            <li>Herbal energetics and properties</li>
+                            <li>Treatment principles and protocols</li>
+                            <li>Integration with modern healthcare</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="nepali">
+                    <h3>हप्ता ५-६: परम्परागत औषधिको आधार</h3>
+                    <div class="schedule-item">
+                        <div class="time">बिहानको सत्र (९:०० - १२:००):</div>
+                        <ul>
+                            <li>नेपाली परम्परागत औषधिको इतिहास</li>
+                            <li>आयुर्वेदका आधारभूत सिद्धान्तहरू</li>
+                            <li>परम्परागत निदान विधिहरू</li>
+                            <li>दोष र प्रकृति बुझाई</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">दिउँसोको सत्र (१:०० - ४:००):</div>
+                        <ul>
+                            <li>परम्परागत फार्माकोलोजी</li>
+                            <li>जडीबुटी ऊर्जा र गुणहरू</li>
+                            <li>उपचार सिद्धान्त र प्रोटोकल</li>
+                            <li>आधुनिक स्वास्थ्य सेवासँग एकीकरण</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="day-container">
+                <div class="english">
+                    <h3>Week 7-8: Clinical Applications</h3>
+                    <div class="schedule-item">
+                        <div class="time">Morning Sessions (9:00 AM - 12:00 PM):</div>
+                        <ul>
+                            <li>Common health conditions and treatments</li>
+                            <li>Herbal formulation principles</li>
+                            <li>Dosage and administration</li>
+                            <li>Safety and contraindications</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">Afternoon Sessions (1:00 PM - 4:00 PM):</div>
+                        <ul>
+                            <li>Case study analysis</li>
+                            <li>Treatment planning</li>
+                            <li>Patient consultation skills</li>
+                            <li>Clinical documentation</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="nepali">
+                    <h3>हप्ता ७-८: क्लिनिकल अनुप्रयोग</h3>
+                    <div class="schedule-item">
+                        <div class="time">बिहानको सत्र (९:०० - १२:००):</div>
+                        <ul>
+                            <li>सामान्य स्वास्थ्य अवस्था र उपचार</li>
+                            <li>जडीबुटी सूत्रीकरण सिद्धान्त</li>
+                            <li>मात्रा र प्रशासन</li>
+                            <li>सुरक्षा र प्रतिकूल संकेत</li>
+                        </ul>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="time">दिउँसोको सत्र (१:०० - ४:००):</div>
+                        <ul>
+                            <li>केस अध्ययन विश्लेषण</li>
+                            <li>उपचार योजना</li>
+                            <li>बिरामी परामर्श सीप</li>
+                            <li>क्लिनिकल कागजात</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Weeks 9-12: Medicine Making -->
@@ -171,7 +382,7 @@
             </div>
         </div>
 
-        <!-- Weeks 13-16: Conservation and Sustainable Practice -->
+        <!-- Weeks 13-16: Conservation -->
         <div class="week-container">
             <h2>Weeks 13-16: Conservation and Sustainable Practice</h2>
             <h2>हप्ता १३-१६: संरक्षण र दिगो अभ्यास</h2>
